--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ timezone: America/Los_Angeles
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Cali's Data Science Portfolio
+title: "Cali's Data Science Portfolio"
 
-tagline: A Data Science Journey: Transforming Data Chaos into Clarity
+tagline: "A Data Science Journey: Transforming Data Chaos into Clarity"
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
